sacar el apendice

--- a/informe.tex
+++ b/informe.tex
@@ -114,7 +114,7 @@ El lenguaje de programación utilizado es Java , versión 8. Se utilizó JUnit c
 \subsection{La estructura general del proyecto}
 
 \paragraph{}
-En cuanto a la estructura, se optó por una implementación simple de Interfaces e Implementaciones, con el objetivo de programar contra interfaces como se puede ver en la figura \ref{grafico}. 
+En cuanto a la estructura, se optó por una implementación simple de Interfaces e Implementaciones, con el objetivo de programar contra interfaces como se puede ver en la figura.
 
 \paragraph{}
 Incialmente la estructura propuesta consistía en una serie de módulos, interconectados y dependientes entre sí mediante una estructura jerárquica. Esta idea inicial no se llevó a cabo por problemas de dependencias cíclicas en esta estructura jerárquica. La estructura de la implementación es conveniente a la hora de definir los testeos unitarios de los métodos implementados y también lo es a la hora de definir archivos de configuración. 
@@ -209,11 +209,6 @@ Observando los resultados podemos concluir que las mejoras realizadas en el cód
 
 \paragraph{}
 No queremos terminar sin agradecer una vez más a los profesores por el voto de confianza que pusieron en los alumnos. También a nuestros compañeros por informarnos cada problema que surgió de la caja y por tenerlos la paciencia para ayudarnos con cada problema surgido durante la integración del simulador.
-
-\section{Apéndice}
-
-\paragraph{}
-texto
 
 \clearpage
 
