--- a/informe.tex
+++ b/informe.tex
@@ -58,14 +58,14 @@ Con el objetivo de estudiar el problema de distanciamiento social en el contexto
 Nuestro trabajo en el desarrollo fue el de estructurar el proyecto, implementar el main (del cual se desencadenan las llamadas a todos los demás módulos),  y desarrollar el modulo de la caja, cuya tarea es la  de atender clientes y encolarlos en la fila correcta.
 
 \paragraph{}
-Por otro lado el trabajo de estructura nos llevo a tomar decisiones como desarrollos de pom.xml con sus respectivas dependencias en cada modulo y como tarea principal se implementaron todos los módulos a travez de un main que permitía mediante un archivo de configuración establecer las variables de la simulación. Y es en este momento donde comienza nuestro trabajo de desarrollo para esta entrega final, donde se mejoraron los tiempos de simulación mediante la optimización de nuestros dos módulos: Main y Caja.
+Por otro lado el trabajo de estructura nos llevo a tomar decisiones como desarrollos de pom.xml con sus respectivas dependencias en cada modulo y como tarea principal se implementaron todos los módulos a través de un main que permitía mediante un archivo de configuración establecer las variables de la simulación. Y es en este momento donde comienza nuestro trabajo de desarrollo para esta entrega final, donde se mejoraron los tiempos de simulación mediante la optimización de nuestros dos módulos: Main y Caja.
 
 \section{Fundamentos}
 
 \subsection{Main}
 
 \paragraph{}
-La idea básica del main consiste en recorrer la lista de agentes y actualizarlos. Una vez que se actualizan todos, se actualiza la lista de agentes anterior por la nueva lista de agentes.Por último el main también debe levantar un archivo de configuración.
+La idea básica del main consiste en recorrer la lista de agentes y actualizarlos. Una vez que se actualizan todos, se actualiza la lista de agentes anterior por la nueva lista de agentes. Por último el main también debe levantar un archivo de configuración.
 
 \subsubsection{Input}
 
@@ -208,7 +208,7 @@ Observando los resultados podemos concluir que las mejoras realizadas en el cód
 \section{Agradecimientos}
 
 \paragraph{}
-No queremos terminar sin agradecer una vez más a los profesores por el voto de confianza que pusieron en los alumnos. También a nuestros compañeros por informarnos cada problema que surgió de la caja y por tenerlos la paciencia para ayudarnos con cada problema surgido durante la integración del simulador.
+No queremos terminar sin agradecer una vez más a los profesores por el voto de confianza que pusieron en los alumnos. También a nuestros compañeros por informarnos cada problema que surgió de la caja y por tenernos la paciencia suficiente para ayudarnos con cada problema surgido durante la integración del simulador.
 
 \clearpage
 
@@ -257,7 +257,7 @@ No queremos terminar sin agradecer una vez más a los profesores por el voto de 
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=4in]{./images/interfaceGeometry.PNG}
-\caption{UML interface de Geometry }
+\caption{UML interface de Geometría }
 \label{interfaceGeomety}
 \end{center}
 \end{figure}
@@ -351,7 +351,7 @@ p0x  & 0  \\
 p0y  & 0  \\
 \hline
 \end{tabularx}
-\caption{Parametros del módulo geometria aislado}
+\caption{Parámetros del módulo geometria aislado}
 \label{Parametros del módulo geometria aislado}
 \end{center}
 \end{table}
