--- a/informe.tex
+++ b/informe.tex
@@ -71,7 +71,7 @@ La idea básica del main consiste en recorrer la lista de agentes y actualizarlo
 
 \paragraph{}
 
-Los inputs del main provienen de la lectura de un archivo de configuración en la cual se especifican todos los valores que son parametrizables en el main. En cuanto al main, los más relevantes son el tiempo total a simular, el numero de agentes, el dt  y el dt2.
+Los inputs del main provienen de la lectura de un archivo de configuración en el cual se especifican todos los valores que son parametrizables en el main. En cuanto al main, los más relevantes son el tiempo total a simular, el numero de agentes, el dt  y el dt2.
 
 \subsubsection{Output}
 
